@@ -31,6 +31,8 @@ import org.rumbledb.runtime.flwor.NativeClauseContext;
 import org.rumbledb.types.BuiltinTypesCatalogue;
 import org.rumbledb.runtime.misc.ComparisonIterator;
 import org.rumbledb.types.ItemType;
+import org.rumbledb.types.SequenceType;
+
 import java.math.BigDecimal;
 import java.math.BigInteger;
 
@@ -69,6 +71,11 @@ public class IntItem implements Item {
     }
 
     @Override
+    public Object getVariantValue() {
+        return getIntValue();
+    }
+
+    @Override
     public BigInteger getIntegerValue() {
         return BigInteger.valueOf(this.value);
     }
@@ -89,11 +96,11 @@ public class IntItem implements Item {
     }
 
     public double castToDoubleValue() {
-        return new Integer(this.value).doubleValue();
+        return Integer.valueOf(this.value).doubleValue();
     }
 
     public float castToFloatValue() {
-        return new Integer(this.value).floatValue();
+        return Integer.valueOf(this.value).floatValue();
     }
 
     public BigDecimal castToDecimalValue() {
@@ -149,7 +156,7 @@ public class IntItem implements Item {
 
     @Override
     public NativeClauseContext generateNativeQuery(NativeClauseContext context) {
-        return new NativeClauseContext(context, "" + this.value, BuiltinTypesCatalogue.intItem);
+        return new NativeClauseContext(context, "" + this.value, SequenceType.INT);
     }
 
     public boolean isNumeric() {
@@ -159,5 +166,21 @@ public class IntItem implements Item {
     @Override
     public boolean isAtomic() {
         return true;
+    }
+
+    @Override
+    public String getSparkSQLValue() {
+        return String.valueOf(this.value);
+    }
+
+    @Override
+    public String getSparkSQLValue(ItemType itemType) {
+        return String.valueOf(this.value);
+    }
+
+    @Override
+    public String getSparkSQLType() {
+        // TODO: Make enum?
+        return "INT";
     }
 }
